fix theme directory

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -25,7 +25,7 @@ This theme is pretty basic and covers all of the essentials. All you have to do 
   
   
   
-  <link rel="stylesheet" href="https://example.com/css/base.scss">
+  <link rel="stylesheet" href="https://example.com/styles.css">
 
 
 
